manifests/dev/affine/Service-affine.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: affine
spec:
  ports:
    - name: http
      port: 3010
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: affine
    app.kubernetes.io/name: affine
  type: ClusterIP
