manifests/dev/affine/Ingress-affine-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: affine-local
  namespace: affine
spec:
  ingressClassName: traefik
  rules:
    - host: affine.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: affine
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - affine.home.kronkltd.net
      secretName: affine-local-tls
