manifests/dev/affine/Ingress-affine.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine
  namespace: affine
spec:
  ingressClassName: traefik
  rules:
    - host: affine.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: affine
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - affine.home.kronkltd.net
      secretName: affine-tls
